This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _hashopenssl has reference leaks in OOM case
Type: resource usage Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: christian.heimes, cstratak, gregory.p.smith, iritkatriel, miss-islington
Priority: normal Keywords: patch

Created on 2019-03-04 09:41 by christian.heimes, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12158 merged christian.heimes, 2019-03-04 09:44
PR 12164 merged miss-islington, 2019-03-04 15:45
PR 12165 closed christian.heimes, 2019-03-04 15:58
PR 12166 merged christian.heimes, 2019-03-04 16:01
Messages (5)
msg337087 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2019-03-04 09:41
Charalampos Stratakis from Red Hat's Python Maintenance Team found two minor reference leaks in _hashopenssl.c. Ref counts of newly allocated are not decreased when allocation of another object fails.
msg337133 - (view) Author: miss-islington (miss-islington) Date: 2019-03-04 15:45
New changeset b7bc283ab6a23ee98784400ebffe7fe410232a2e by Miss Islington (bot) (Christian Heimes) in branch 'master':
bpo-36179: Fix ref leaks in _hashopenssl (GH-12158)
https://github.com/python/cpython/commit/b7bc283ab6a23ee98784400ebffe7fe410232a2e
msg337137 - (view) Author: miss-islington (miss-islington) Date: 2019-03-04 16:17
New changeset a59d33a1b08bd3dc9dc2584d4360ca81b0f1ad49 by Miss Islington (bot) in branch '3.7':
bpo-36179: Fix ref leaks in _hashopenssl (GH-12158)
https://github.com/python/cpython/commit/a59d33a1b08bd3dc9dc2584d4360ca81b0f1ad49
msg337140 - (view) Author: miss-islington (miss-islington) Date: 2019-03-04 17:10
New changeset 84b5ac9ba6fd71ba9d0ef98e2a166a35189b263f by Miss Islington (bot) (Christian Heimes) in branch '2.7':
[2.7] bpo-36179: Fix ref leaks in _hashopenssl (GH-12158) (GH-12166)
https://github.com/python/cpython/commit/84b5ac9ba6fd71ba9d0ef98e2a166a35189b263f
msg378766 - (view) Author: Irit Katriel (iritkatriel) * (Python committer) Date: 2020-10-16 22:09
Can this be closed?
History
Date User Action Args
2022-04-11 14:59:11adminsetgithub: 80360
2020-10-17 06:26:39gregory.p.smithsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-10-16 22:09:45iritkatrielsetnosy: + iritkatriel
messages: + msg378766
2019-03-04 17:10:51miss-islingtonsetmessages: + msg337140
2019-03-04 16:17:33miss-islingtonsetmessages: + msg337137
2019-03-04 16:01:37christian.heimessetpull_requests: + pull_request12164
2019-03-04 15:58:48christian.heimessetpull_requests: + pull_request12163
2019-03-04 15:45:54miss-islingtonsetpull_requests: + pull_request12162
2019-03-04 15:45:45miss-islingtonsetnosy: + miss-islington
messages: + msg337133
2019-03-04 12:20:32xtreaksetnosy: + cstratak
2019-03-04 09:44:56christian.heimessetkeywords: + patch
pull_requests: + pull_request12156
2019-03-04 09:41:10christian.heimescreate